# tiago_telepresence_controllers

./: .gitignore  CMakeLists.txt  README.md  package.xml  tiago_telepresence_controllers_plugins.xml
config/: telepresence_controllers.yaml  telepresence_controllers_dual.yaml  telepresence_motions.yaml  telepresence_motions_dual.yaml
include/: abstract_tp_controller.hpp  circular_buffer.hpp  command_buffer.hpp  controller_base.hpp  generic_tp_controller.hpp
include/st/: ConfigurationSelector.hpp  ScrewTheoryIkProblem.hpp  ScrewTheoryTools.hpp  TiagoSubproblems.hpp  chainiksolverpos_st.hpp
launch/: telepresence_audio.launch  telepresence_controllers.launch  telepresence_controllers_dual.launch  tiago_dual_gazebo.launch  tiago_dual_real.launch  tiago_gazebo.launch  tiago_real.launch
msg/: JointPositions.msg  VRControllerStamped.msg
scripts/: arm_motion.py  init_telepresence.py  stop_telepresence.py  tp_controller_switcher.py
src/: abstract_tp_controller.cpp  arm_tp_controller.cpp  command_buffer.cpp  controller_base.cpp  generic_tp_controller.cpp  gripper_tp_controller.cpp  head_tp_controller.cpp  torso_tp_controller.cpp
src/st/: ConfigurationSelectorLeastOverallAngularDisplacement.cpp  MatrixExponential.cpp  ProductOfExponentials.cpp  ScrewTheoryIkProblem.cpp  TiagoConfigurationSelector.cpp  TiagoIkProblem.cpp  TiagoSubproblems.cpp  chainiksolverpos_st.cpp
test/: chainiksolverpos_st.cpp  ik_st.test  kinematics.cpp  kinematics.test  kinematics_dual.cpp  kinematics_dual.test
