<package format="2">
    <name>tiago_telepresence_controllers</name>
    <version>1.0.0</version>
    <description>A collections of joint controller for teleoperation applications on TIAGo.</description>
    <maintainer email="bwmn.peter@gmail.com">PeterBowman</maintainer>
    <license>LGPLv2.1</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>actionlib</depend>
    <depend>play_motion_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>controller_manager_msgs</depend>
    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>orocos_kdl</depend>
    <depend>kdl_parser</depend>
    <depend>urdf</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>ros_tcp_endpoint</depend>
    <test_depend>rostest</test_depend>

    <export>
        <controller_interface plugin="${prefix}/tiago_telepresence_controllers_plugins.xml"/>
    </export>
  </package>
